--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   "homepage": "https://github.com/ANUSHKALA/Proj13_Authentication_and_Security#readme",
   "dependencies": {
     "body-parser": "^1.19.2",
+    "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.3",
+    "md5": "^2.3.0",
     "mongoose": "^6.2.8",
     "mongoose-encryption": "^2.1.2"
   }
